src/components/Landing/index.scss
main.landing {
  height: calc(100% - #{$navbar-height-md} - #{$footer-height-md});
  text-align: center;

  .jumbotron {
    background: transparent;
  }
}

@media screen and (max-width: 991px) {
  main.landing {
    .container {
      max-width: 95%;

      .jumbotron {
        margin-bottom: 0;
        padding-bottom: 15px;
        padding-top: 15px;
      }
    }
  }
}

@media screen and (max-width: 736px) {
  main.landing {
    height: auto;

    .jumbotron {
      margin-bottom: 0;
    }
  }
}

